fixed lineedit inside KelGuiButton. added spacing class into globalstyle.css

--- a/widgets/style/globalstyle.css
+++ b/widgets/style/globalstyle.css
@@ -41,6 +41,11 @@
 	text-transform: uppercase;
 }
 
+.letterspace
+{
+	letter-spacing: 4pt;
+}
+
 /****************************************************
  * Font Styles
  ***************************************************/
